# pcap-analyzer

./: .gitignore  LICENSE  README.markdown  README.md  pcap-analyzer.py  requirements.txt
PcapCrystal/: .env  .replit  app.py  config.yaml  pyproject.toml  replit.md
PcapCrystal/.streamlit/: config.toml
PcapCrystal/analytics/: __init__.py  detections.py  mitre.py  risk.py
PcapCrystal/core/: __init__.py  analyzer.py
PcapCrystal/data/cache/: cache.db
PcapCrystal/data/cache/geo/: cache.db
PcapCrystal/intel/: __init__.py  abuseipdb.py  base.py  cache.py  geo.py  virustotal.py
PcapCrystal/models/: __init__.py  detection.py  enrichment.py
PcapCrystal/parsing/: __init__.py  dns.py  http.py  tls.py
PcapCrystal/ui/: __init__.py  settings.py  tabs.py
PcapCrystal/utils/: __init__.py  helpers.py
PcapCrystal/viz/: __init__.py  enhanced_graphs.py  geographic.py
